css/styles.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&family=Space+Mono&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400&family=Space+Mono&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&family=Space+Mono&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@600&family=Space+Mono&display=swap');

:root {
  --mainfont: poppins, times, serif;
}

* {
  margin: 0;
  padding: 0;
  font-family: var(--mainfont);
}

.body {
  background-color: #f4f5f7;
  filter: none;
}

.intro {
  display: flex;
  flex-direction: column;
}

.header {
  width: 100%;
  height: 9%;
}

div.mobile-menu {
  position: fixed;
  z-index: 10;
  padding: 2rem;
  background-color: #6070ff;
  backdrop-filter: blur(100px);
  opacity: 0.9;
}

.mobile-menu {
  display: flex;
  flex-direction: column;
  width: 100%;
  height: 100%;
  font-family: var(--main-font);
  font-style: normal;
  font-weight: 600;
  font-size: 32px;
  line-height: 44px;
  gap: 1.5rem;
  padding-top: 1rem;
  visibility: hidden;
}

.m-navlink {
  color: white;
  text-decoration: none;
}

.close-btn {
  align-self: flex-end;
  padding-right: 4rem;
}

.navbar {
  height: 100%;
  padding-left: 30px;
  padding-right: 30px;
  display: flex;
  flex-wrap: nowrap;
  align-items: center;
  justify-content: space-between;
}

.my-logo {
  margin-top: 10px;
  margin-bottom: 10px;
  height: 50%;
  width: 76px;
  font-size: 18px;
  color: #0015d6;
  font-weight: 700;
  text-align: center;
  line-height: 20px;
}

.navlist {
  display: flex;
  justify-content: space-between;
}

.navlink {
  display: none;
}

.menu-icon {
  margin-top: 14px;
  margin-bottom: 14px;
  width: 18px;
  height: 12px;
  background-image: url("../images/menu-icon.png");
}

.main {
  width: 100%;
  background-image: url("../images/Header\ bg.png"), url("../images/header-background-mobile.png");
  background-size: cover;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.main-content {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
}

.primary-text-container {
  margin-top: 114px;
  text-align: left;
  width: 87.2%;
  max-width: 370px;
  border: 0;
  line-height: 52px;
  margin-left: 6.4%;
}

.primary-text {
  font-size: 40px;
  color: #172b4d;
  font-weight: 700;
  padding: 0;
}

.secondary-text {
  margin-top: 12px;
  text-align: left;
  margin-left: 6.4%;
  width: 87.2%;
  min-width: 327px;
  max-width: 840px;
  font-size: 16px;
  color: #172b4d;
  font-style: normal;
  font-weight: 400;
  border: 0;
  line-height: 24px;
}

.connect-text {
  margin-top: 12px;
  margin-left: 6.4%;
  height: 24px;
  width: fit-content;
  font-size: 16px;
  color: #0018f5;
  font-style: normal;
  font-weight: 500;
  border: 0;
  line-height: 24px;
}

.socialmedia-icons {
  margin-top: 12px;
  margin-left: 6.4%;
  width: auto;
  max-width: 400px;
  height: 20px;
}

ul {
  list-style-type: none;
  display: flex;
  gap: 12px;
}

.projects {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(327px, 1fr));
  justify-content: space-around;
  align-items: start;
  column-gap: 10px;
  margin-left: 6.4%;
}

.project {
  margin-top: 88px;
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  padding: 16px;
  gap: 12px;
  width: 327px;
  background: #fff;
  border: 1px solid #dfe1e6;
  border-radius: 16px;
  justify-content: space-around;
}

#project1 {
  order: 0;
}

#project2 {
  order: 1;
}

#project3 {
  order: 2;
}

#project4 {
  order: 3;
}

#project1 .pimage {
  margin-bottom: 5px;
  width: 295px;
  height: 220px;
  background-image: url("../images/p1image.png");
}

#project2 .pimage {
  margin-bottom: 5px;
  width: 295px;
  height: 220px;
  background-image: url("../images/p2image.png");
}

#project3 .pimage {
  width: 295px;
  height: 220px;
  background-image: url("../images/p3image.png");
}

#project4 .pimage {
  width: 295px;
  height: 220px;
  background-image: url("../images/p4image.png");
}

.p-title {
  width: 220px;
  flex: none;
  order: 0;
  flex-grow: 0;
  align-items: center;
  text-align: left;
  align-self: flex-start;
}

.p-title h2 {
  font-style: normal;
  font-weight: 700;
  font-size: 32px;
  line-height: 44px;
  color: #172b4d;
}

.details-list {
  display: flex;
  width: 295px;
  height: 36px;
  align-items: center;
}

.client {
  width: 55px;
  height: 16px;
  font-style: normal;
  font-weight: 600;
  font-size: 13px;
  line-height: 16px;
  color: #344563;
}

.spacedot {
  width: 8px;
  height: 8px;
  background-image: url("../images/spacedot.png");
}

.role {
  width: 90px;
  height: 16px;
  font-style: normal;
  font-weight: 600;
  font-size: 13px;
  line-height: 16px;
  color: #4d5666;
}

.year {
  width: 29px;
  height: 16px;
  font-style: normal;
  font-weight: 600;
  font-size: 13px;
  line-height: 16px;
  color: #4d5666;
}

.p-description {
  width: 295px;
  height: 76px;
  font-style: normal;
  font-weight: 400;
  font-size: 15px;
  line-height: 24px;
  color: #344563;
}

.languages-list {
  display: flex;
  width: 295px;
  height: 24px;
  align-items: center;
}

.lang {
  display: flex;
  flex-direction: row;
  align-items: center;
  padding: 4px 12px;
  width: auto;
  height: 24px;
  background: #ebebff;
  border-radius: 8px;
  font-style: normal;
  font-weight: 500;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.03em;
  color: #525252;
}

.project-access {
  box-sizing: border-box;
  margin-top: 25px;
  margin-bottom: 25px;
  display: flex;
  flex-direction: row;
  align-items: center;
  padding: 12px;
  width: 132px;
  height: 48px;
  border: 1px solid #6070ff;
  border-radius: 8px;
  font-style: normal;
  font-weight: 500;
  font-size: 17px;
  line-height: 24px;
  text-align: center;
  letter-spacing: 0.03em;
  color: #396df2;
}

.project-access:hover {
  background: #6070ff;
  box-shadow: 0 8px 16px rgba(64, 83, 252, 0.24);
  color: #fff;
}
/* ... */

